--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,10 +15,48 @@ jobs:
 
       - name: Trigger testRigor test suite
         run: |
-          curl -X POST "https://api.testrigor.com/v1/run_test" \
-            -H "Content-Type: application/json" \
-            -H "Authorization: Bearer ${{ secrets.TESTRIGOR_API_KEY }}" \
-            -d '{
-              "test_suite_id": "YOUR_TEST_SUITE_ID",
-              "execution_name": "GitHub CI Run - ${{ github.run_number }}"
-            }'
+          curl -X POST \
+            -H 'Content-type: application/json' \
+            -H 'auth-token: fc4cd116-1ebe-47db-8183-e6d7fe79fc52' \
+            --data '{"forceCancelPreviousTesting":true,"storedValues":{"storedValueName1":"Value"}}' \
+            https://api.testrigor.com/api/v1/apps/sZTPc4eRro8poPLnh/retest
+          
+          sleep 10
+          
+          while true
+          do
+            echo " "
+            echo "==================================="
+            echo " Checking TestRigor retest"
+            echo "==================================="
+            response=$(curl -i -o - -s -X GET 'https://api.testrigor.com/api/v1/apps/sZTPc4eRro8poPLnh/status' -H 'auth-token: fc4cd116-1ebe-47db-8183-e6d7fe79fc52' -H 'Accept: application/json')
+            code=$(echo "$response" | grep HTTP |  awk '{print $2}')
+            body=$(echo "$response" | sed -n '/{/,/}/p')
+            echo "Status code: " $code
+            echo "Response: " $body
+            case $code in
+              4*|5*)
+                # 400 or 500 errors
+                echo "Error calling API"
+                exit 1
+                ;;
+              200)
+                # 200: successfully finished
+                echo "Test finished successfully"
+                exit 0
+                ;;
+              227|228)
+                # 227: New - 228: In progress
+                echo "Test is not finished yet"
+                ;;
+              230)
+                # 230: Failed
+                echo "Test finished but failed"
+                exit 1
+                ;;
+              *)
+                echo "Unknown status"
+                exit 1
+              esac
+            sleep 10
+          done
